k8s/base/canary/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: node-api-poc-canary
  namespace: devsecops-canary
spec:
  selector:
    app: node-api-poc-canary
  ports:
    - port: 80
      targetPort: 3000
  type: ClusterIP
